[project]
name = "ar-harness"
version = "0.1.0"
description = "Thin Claude Agent SDK harness for Andrej Karpathy's autoresearch protocol"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.56",
    "anyio>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["harness.py"]
