[project]
name = "ar-harness"
version = "0.1.0"
description = "Autoresearch agent loop harness via OpenRouter (Gemini 2.0 Flash / any tool-using model)"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
]

[project.scripts]
ar-harness = "harness:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["harness.py"]
