[project]
name = "ar-harness"
version = "0.2.0"
description = "Autoresearch agent loop — supports OpenRouter (any model) and Claude Agent SDK"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "claude-agent-sdk>=0.1.56",
    "anyio>=4.0.0",
]

[project.scripts]
ar-harness = "harness:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["harness.py"]
